[package]
name = "pathfinding_sandbox"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_egui = "0.33.0"
egui-phosphor = "0.9.0"
